testsuite/tests/patsyn/should_fail/T15289.stderr

T15289.hs:5:24: error: [GHC-83865]
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type ‘Maybe’
      In a pattern type signature: Maybe
      In the pattern: True :: Maybe
